unpackaged/main/default/objects/BLND_DFCS_Slide__c/BLND_DFCS_Slide__c.object-meta.xml
<CustomObject>
	<label>Slide</label>
	<nameField>
		<label>Slide Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Slides</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>