unpackaged/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Carousel__c.field-meta.xml
<CustomField>
	<fullName>BLND_Carousel__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Carousel</label>
	<referenceTo>BLND_DFCS_Carousel__c</referenceTo>
	<relationshipLabel>Slides</relationshipLabel>
	<relationshipName>Slides</relationshipName>
	<type>Lookup</type>
</CustomField>