unpackaged/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Flag3__c.field-meta.xml
<CustomField>
	<fullName>BLND_Flag3__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Flag3</label>
	<type>Checkbox</type>
</CustomField>