unpackaged/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Keywords__c.field-meta.xml
<CustomField>
	<fullName>BLND_Keywords__c</fullName>
	<label>Keywords</label>
	<type>TextArea</type>
</CustomField>