unpackaged/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Locked__c.field-meta.xml
<CustomField>
	<fullName>BLND_Locked__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Locked</label>
	<type>Checkbox</type>
</CustomField>