unpackaged/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Over3__c.field-meta.xml
<CustomField>
	<fullName>BLND_Over3__c</fullName>
	<label>Over3</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>