unpackaged/main/default/objects/BLND_DFCS_Slide__c/fields/BLND_Version__c.field-meta.xml
<CustomField>
	<fullName>BLND_Version__c</fullName>
	<label>Version</label>
	<precision>4</precision>
	<scale>2</scale>
	<type>Number</type>
</CustomField>